更新许多东西

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,73 +14,25 @@ import LinkCard from "../components/page/LinkCard.astro";
   <BaseCard title="Home">
     <div class="flex">
       <div class="p-6">
-          # Hi there! 👋
+        这是一个萝莉控的小站。
 
-          This is the Frosti theme
-
-          A clean, elegant, and fast static blog template
+        或者<a href = "https://nahida.cfd">另一个</a>？
+        
+        ## <a href = "/about" target = "_blank">主页在此</a>
       </div>
     </div>
 
   </BaseCard>
 
-  <BaseCard title="Home" image="/index.webp">
-# Frosti Introduction
-
+  <BaseCard title="Home" image="/Sigewinne_1.webp">
 ---
+如果你去看了上面那个站的内容的话，你会发现，上一个站里全部都是日记。
 
-## Welcome to Frosti Blog Template
+而我又有两个域名，不用白不用是吧。  
+那么这个站主要发的就是游记或者学习笔记之类的啦。
 
-### 🧊 Frosti
+当然，如主站所说，主站都在施工，那这个站当然也在施工咯。
 
-**A clean, elegant, and fast static blog template! 🚀 Developed with [Astro](https://astro.build/)!**
-
-[**🖥️ Frosti Demo**](https://frosti.saroprock.com)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**🌏 Chinese README**](https://github.com/EveSunMaple/Frosti/blob/main/README.zh-CN.md)&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;[**❤️ My Blog**](https://www.saroprock.com)
-
-### Why Choose Frosti?
-
-- **Lightning-fast Access Speed and Excellent SEO**: Your blog content spreads quickly and efficiently.
-- **View Transition Animations**: Smooth visual experience with Swup.
-- **Integrated Sidebar**: Includes social info cards, theme switch, back-to-top button, and persistent article directory.
-- **Powerful Search Functionality**: Easily search articles using pagefind.
-- **Day/Night Mode**: Adapt to different reading environments.
-- **Rich Components**: Collapsible pages, link cards, timeline components, various alerts, code block copy button, image comparison, and end-of-article copyright information.
-- **Comment System**: Built with [Waline](https://waline.js.org/) for interactive discussions.
-- **Responsive Design**: Crafted with [Tailwind CSS](https://tailwindcss.com/) and [daisyUI](https://daisyui.com/) to fit different devices.
-
-### Feature Highlights
-
-- **Easy Installation and Use**: Install with just one command, customize everything in `consts.ts`.
-- **Variety of Article Components**: Enhance the presentation of your blog content.
-
-### How to Get Started?
-
-1. **Install Frosti**
-
-   Simply run the following command in your terminal:
-
-   ```sh
-   npm create astro@latest -- --template EveSunMaple/Frosti
-   ```
-
-2. **Configure the Comment System**
-
-   Set up [Waline](https://waline.js.org/) to enable comments. Check `src\components\Comment.astro` for details.
-
-### Future Plans
-
-- **Integrate Headless CMS**.
-- **Fix Known Style Bugs**.
-- **More Features Coming Soon...**
-
-### Special Thanks
-
-A big thanks to @[Saicaca](https://github.com/saicaca) and @[WRXinYue](https://github.com/WRXinYue) for their inspiration and help with Frosti.
-
-### Star History
-
-![Star History Chart](https://api.star-history.com/svg?repos=EveSunMaple/Frosti&type=Date)
-
-
+如果有人说我恋童癖的话，那么我只能说：我厨的都是 $500$ 岁起步的，不比你厨的老多了？！！
   </BaseCard>
 </BaseLayout>
