--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -20,35 +20,17 @@ import ProjectJS from "../components/ProjectJS.astro";
 
   </BaseCard>
   <ProjectCard
-    title="Frosti"
-    image="https://frosti.saroprock.com/view.png"
-    desc="一个干净、优美、快速的博客模板！"
-    url="https://github.com/EveSunMaple/Frosti"
+    title="小站1"
+    desc="日记站"
+    url="https://nahida.cfd"
     badge="Astro"
     target="_self"
   />
   <ProjectCard
-    title="Word-testing-application"
-    image="https://raw.githubusercontent.com/EveSunMaple/Word-testing-application/master/view.png"
-    desc="一个用Python和Tkinter制作的单词测试应用"
-    url="https://github.com/EveSunMaple/Word-testing-application"
-    badge="Python"
-    target="_self"
-  />
-  <ProjectCard
-    title="InfinitySky"
-    image="https://raw.githubusercontent.com/EveSunMaple/InfinitySky/master/view.png"
-    desc="一个ExtraEasy2D的示例项目"
-    url="https://github.com/EveSunMaple/InfinitySky"
-    badge="C++"
-    target="_self"
-  />
-  <ProjectCard
-    title="code-judge"
-    image="https://raw.githubusercontent.com/EveSunMaple/code-judge/master/index.png"
-    desc="An elegant yet uncomplicated CPP judging system for informatics competitions."
-    url="https://github.com/EveSunMaple/code-judge"
-    badge="C++"
+    title="小站2"
+    desc="博客站"
+    url="https://sigewinne.us"
+    badge="Astro"
     target="_self"
   />
 </BaseLayout>
