--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -22,14 +22,14 @@ import ProjectJS from "../components/ProjectJS.astro";
   <ProjectCard
     title="小站1"
     desc="日记站"
-    url="https://nahida.cfd"
+    url="https://github.com/ybz2010/Frosti1"
     badge="Astro"
     target="_self"
   />
   <ProjectCard
     title="小站2"
     desc="博客站"
-    url="https://sigewinne.us"
+    url="https://github.com/ybz2010/Frosti2"
     badge="Astro"
     target="_self"
   />
