--- a/src/content/blog/csp2024.md
+++ b/src/content/blog/csp2024.md
@@ -2,7 +2,7 @@
 title: "csp2024游记"
 description: "这是一个迟来的不止一点半点的游记"
 pubDate: "Nov 18 2024"
-image: "/Sigewinne_2.webp"
+image: "/head_pic/Sigewinne_2.webp"
 categories:
   - tech
 tags:
