--- a/src/content/blog/字典树学习笔记.md
+++ b/src/content/blog/字典树学习笔记.md
@@ -2,7 +2,7 @@
 title: "字典树学习笔记"
 description: "如题"
 pubDate: "Nov 22 2024"
-image: "/Sigewinne_3.webp"
+image: "/head_pic/Sigewinne_3.webp"
 categories:
   - tech
 tags:
