--- a/src/content/blog/这里也什么都没有.md
+++ b/src/content/blog/这里也什么都没有.md
@@ -2,7 +2,7 @@
 title: "这里什么都没有"
 description: "null"
 pubDate: "Aug 10 1919"
-image: "/null.webp"
+image: "/head_pic/null.webp"
 categories:
   - life
 tags:
