--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -24,7 +24,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
   </BaseCard>
 
-  <BaseCard title="Home" image="/Sigewinne_1.webp">
+  <BaseCard title="Home" image="/head_pic/Sigewinne_1.webp">
 ---
 如果你去看了上面那个站的内容的话，你会发现，上一个站里全部都是日记。
 
