--- a/src/content/blog/矩阵快速幂学习笔记.md
+++ b/src/content/blog/矩阵快速幂学习笔记.md
@@ -2,7 +2,7 @@
 title: "矩阵快速幂学习笔记"
 description: "如题"
 pubDate: "Dec 18 2024"
-image: "/head_pic/NahidA_4.webp"
+image: "/head_pic/Nahida_4.webp"
 categories:
   - tech
 tags:
