更新学习笔记

--- a/src/content/blog/二项式和容斥原理学习笔记.md
+++ b/src/content/blog/二项式和容斥原理学习笔记.md
@@ -24,7 +24,7 @@ $$
 
 证明的思路是考虑一个元素在每一个 $\bigcap\limits_{i = 1}^{m}S_{a_{i}}$ 里出现的次数，然后通过一番暴算，我们能够发现每个元素都只出现了 $1$ 次，这样，每个元素合起来就变成了总的并集。
 
-详见[OI-wiki](https://oi.wiki/math/combinatorics/inclusion-exclusion-principle/)
+详见 [OI-wiki](https://oi.wiki/math/combinatorics/inclusion-exclusion-principle/)
 
 ## 二项式反演
 
@@ -70,7 +70,7 @@ f_{n} = \sum\limits_{i = 0}^{n}(-1)^{i}\binom{n}{i}g_{i}
 g_{n} = \sum\limits_{i = 0}^{n}(-1)^{i}\binom{n}{i}f_{i}
 $$
 
-如何用数学方法证明这个公式是正确的呢？直接代入就行。  
+如何用数学方法证明这个公式是正确的呢？直接代入就行。\
 将 $f_{n} = \sum\limits_{i = 0}^{n}(-1)^{i}\binom{n}{i}g_{i}$ 代入：
 
 $$
@@ -86,14 +86,14 @@ $$
 
 显然成立。当然，这个柿子里还有一些不那么显然的东西
 
-1. $\displaystyle\binom{n}{i}\binom{i}{j} = \binom{n}{j}\binom{n - j}{n - i}$  
-这个可以用数学方法证明，也可组合意义的方法证明，这里主要说明组合意义的证法。  
-求 $|U| = n,|A| = i,b = |j|,B \subseteq A \subseteq U$ 的方案数。这里有两种方法：  
-法一：先在 $U$ 里取 $i$ 个元素构成集合 $A$，方案数为 $\binom{n}{i}$，然后在 $i$ 个元素里再取 $j$ 个元素构成集合 $B$，方案数为 $\binom{i}{j}$，合起来就是 $\binom{n}{i}\binom{i}{j}$  
-法二：先在 $U$ 里取 $j$ 个元素构成集合 $B$，方案数为 $\binom{n}{j}$，再在剩下的 $n - j$ 个元素里取 $i - j$ 个元素，方案数为 $\binom{n - j}{i - j}$，又有 $\binom{n - j}{i - j} = \binom{n - j}{n - i}$，所以方案数就是 $\binom{n}{j}\binom{n - j}{n - i}$。  
-得证。
-2. $\displaystyle\sum\limits_{i = 0}^{n - j}(-1)^{i}\binom{n - j}{i} = [j = n]$  
-设 $k = n - j$，令 $k = 0$，原式的值为 $1$，令 $k > 0$，原式为 $\sum\limits_{i = 0}^{k}\binom{k}{i}(-1)^{i}$，我们来添一个项：$\sum\limits_{i = 0}^{k}\binom{k}{i}(-1)^{i} 1^{i}$，发现，这玩意不就是[二项式定理的](https://www.shuxuele.com/algebra/binomial-theorem.html)的右边那坨吗？那么原式就是 $(-1 + 1)^{k} = 0^{k} = 0$。得证。
+1. $\displaystyle\binom{n}{i}\binom{i}{j} = \binom{n}{j}\binom{n - j}{n - i}$\
+   这个可以用数学方法证明，也可组合意义的方法证明，这里主要说明组合意义的证法。\
+   求 $|U| = n,|A| = i,b = |j|,B \subseteq A \subseteq U$ 的方案数。这里有两种方法：\
+   法一：先在 $U$ 里取 $i$ 个元素构成集合 $A$，方案数为 $\binom{n}{i}$，然后在 $i$ 个元素里再取 $j$ 个元素构成集合 $B$，方案数为 $\binom{i}{j}$，合起来就是 $\binom{n}{i}\binom{i}{j}$\
+   法二：先在 $U$ 里取 $j$ 个元素构成集合 $B$，方案数为 $\binom{n}{j}$，再在剩下的 $n - j$ 个元素里取 $i - j$ 个元素，方案数为 $\binom{n - j}{i - j}$，又有 $\binom{n - j}{i - j} = \binom{n - j}{n - i}$，所以方案数就是 $\binom{n}{j}\binom{n - j}{n - i}$。\
+   得证。
+2. $\displaystyle\sum\limits_{i = 0}^{n - j}(-1)^{i}\binom{n - j}{i} = [j = n]$\
+   设 $k = n - j$，令 $k = 0$，原式的值为 $1$，令 $k > 0$，原式为 $\sum\limits_{i = 0}^{k}\binom{k}{i}(-1)^{i}$，我们来添一个项：$\sum\limits_{i = 0}^{k}\binom{k}{i}(-1)^{i} 1^{i}$，发现，这玩意不就是[二项式定理的](https://www.shuxuele.com/algebra/binomial-theorem.html)的右边那坨吗？那么原式就是 $(-1 + 1)^{k} = 0^{k} = 0$。得证。
 
 现在再看那个式子就比较好懂了。注意再第二点那里，因为数学老师告诉我们 $0^{0}$ 没有意义，所以在证明的时候为了严谨需要分类讨论。在做题的时候，为了方便可以钦定 $0^{0} = 1$。
 
@@ -133,15 +133,15 @@ f_{n} = \sum\limits_{i = n}^{m}\binom{i}{n}g_{i}
 g_{n} = \sum\limits_{i = n}^{m}(-1)^{i - n}\binom{i}{n}f_{i}
 $$
 
-为什么形式四非常常用呢？因为题里多半都是求**恰好**的方案数。而我们好求的一般都是**至少**的方案数。比如：有 $m$ 个条件，$g_{i}$ 表示恰好满足 $i$ 个条件的方案数，$f_{i}$ 表示钦定满足 $i$ 个条件，剩下的随便的方案数，也就是至少。为啥是至少呢？因为有可能在那随便选的方案里装上某个条件。从 $f_{i}$ 的表述里就可以看出，$f_{i}$ 比 $g_{i}$ 好求很多，我们就可以用 $f$ 推得 $g$。
+为什么形式四非常常用呢？因为题里多半都是求**恰好**满足一些条件的方案数。而我们好求的一般都是**钦定**满足一些条件的方案数。比如：有 $m$ 个条件，$g_{i}$ 表示恰好满足 $i$ 个条件的方案数，$f_{i}$ 表示钦定满足 $i$ 个条件，剩下的随便的方案数。从 $f_{i}$ 的表述里就可以看出，$f_{i}$ 比 $g_{i}$ 好求很多，我们就可以用 $f$ 推得 $g$。
 
-推导思路和证明思路来自[__allenge的博客](https://www.cnblogs.com/GDOI2018/p/14491894.html)。
+推导思路和证明思路来自 [\_\_allenge 的博客](https://www.cnblogs.com/GDOI2018/p/14491894.html)。
 
 ## 例题 for 暴力容斥
 
-### [P1450 [HAOI2008] 硬币购物](https://www.luogu.com.cn/problem/P1450)
+### [P1450 \[HAOI2008\] 硬币购物](https://www.luogu.com.cn/problem/P1450)
 
-我们先考虑没有限制的情况：$dp_{i}$ 表示没有限制的情况下买价格为 $i$ 的物品的方案数，容易发现这就是一个完全背包，可以在 $\mathcal{O}(val)$ 的复杂度下预处理，其中 $val$ 表示最大价格。然后接下来考虑限制的情况。发现正着考虑不超过限制的情况不太好做，**正难则反**。  
+我们先考虑没有限制的情况：$dp_{i}$ 表示没有限制的情况下买价格为 $i$ 的物品的方案数，容易发现这就是一个完全背包，可以在 $\mathcal{O}(val)$ 的复杂度下预处理，其中 $val$ 表示最大价格。然后接下来考虑限制的情况。发现正着考虑不超过限制的情况不太好做，**正难则反**。\
 我们考虑超过限制的情况。超过限制就是第 $i$ 个硬币强制选 $d_{i} + 1$ 个，剩下的依然随便选，那么情况数就是 $dp_{s - (d_{i} + 1) \times c_{i}}$，答案就要减去 $\sum\limits_{i = 1}^{4}dp_{s - (d_{i} + 1) \times c_{i}}$。这是单个硬币超出限制的情况，如果有多个硬币，就得请出我们的容斥原理了。但是，容斥原理的公式要求任意两个集合的交集和并集大小相等，这很明显不相等啊，我们又发现：只有 $4$ 种硬币，那我们直接枚举不就行了吗？无非就是带一个 $16$ 的常数嘛。
 
 核心代码：
@@ -159,10 +159,10 @@ for (int k = 1; k < (1 << 4); k++)
 }
 ```
 
-### [P6521 [CEOI2010 day2] pin](https://www.luogu.com.cn/problem/P6521)
+### [P6521 \[CEOI2010 day2\] pin](https://www.luogu.com.cn/problem/P6521)
 
-发现考虑不同的方案数有点难，**正难则反**。  
-依然先考虑**至少**。我们设 $cnt_i$ 为至少有 $i$ 位相同的方案数。这个可以用哈希求解。我们设哈希函数：
+发现考虑不同的方案数有点难，**正难则反**。\
+我们设 $cnt_i$ 为钦定有 $i$ 位相同的方案数。这个可以用哈希求解。我们设哈希函数：
 
 ```cpp
 int hsh(char ch){return isdigit(ch) ? ch - '0' : ch - 'a' + 10;}
@@ -171,7 +171,7 @@ int hsh(char ch1,char ch2,char ch3)
 {return hsh(ch1) * 36 * 36 + hsh(ch2) * 36 + hsh(ch3);}
 ```
 
-分别用于求解一个字符，两个字符，三个字符的哈希值。很明显，这个哈希函数生成的哈希值不会超过 $6 \times 10 ^ 4$。那么我们记录 $tmp_{i}$ 表示有多少个字符序列的哈希值是 $i$，然后要求解方案数呢，就相当于求解**在 $tmp_{i}$ 个元素里随便取两个不同元素的方案数**，很明显是 $\frac{tmp_{i} \times (tmp_{i} - 1)}{2}$。最后，我们求得了至少有 $i$ 个元素相同的方案数，因为最多有 $4$ 个元素相同，所以我们直接暴力容斥就行。
+分别用于求解一个字符，两个字符，三个字符的哈希值。很明显，这个哈希函数生成的哈希值不会超过 $6 \times 10 ^ 4$。那么我们记录 $tmp_{i}$ 表示有多少个字符序列的哈希值是 $i$，然后要求解方案数呢，就相当于求解**在 $tmp_{i}$ 个元素里随便取两个不同元素的方案数**，很明显是 $\frac{tmp_{i} \times (tmp_{i} - 1)}{2}$。最后，我们求得了钦定有 $i$ 个元素相同的方案数，因为最多有 $4$ 个元素相同，所以我们直接暴力容斥就行。
 
 code:
 
@@ -219,11 +219,9 @@ printf("%lld",ans[4 - d]);//由于求解的是相同的，所以不同的就是4
 
 ## 例题 for 二项式反演
 
-### [P10986 [蓝桥杯 2023 国 Python A] 2023](https://www.luogu.com.cn/problem/P10986)
+### [P10986 \[蓝桥杯 2023 国 Python A\] 2023](https://www.luogu.com.cn/problem/P10986)
 
-我们看到**恰好**两个字，就想到先推**至少**的情况，再用二项式反演的式子推到**恰好**。
-
-设 $f_{m}$ 表示至少有 $m$ 个 `2023` 的方案数。我们钦定有 $m$ 个 `2023`，再用[插板法](https://oi-wiki.org/math/combinatorics/combination/#%E6%8F%92%E6%9D%BF%E6%B3%95)，在这些 `2023` 的缝里插入那些乱七八糟的数。因为插入的时候会再凑出一些 `2023`，所以是**至少**。那么，在 $m$ 个 `2023` 中插入 $n - 4m$ 个数的方案是
+设 $f_{m}$ 表示钦定有 $m$ 个 `2023` 的方案数。用[插板法](https://oi-wiki.org/math/combinatorics/combination/#%E6%8F%92%E6%9D%BF%E6%B3%95)，在这些 `2023` 的缝里插入那些乱七八糟的数。在 $m$ 个 `2023` 中插入 $n - 4m$ 个数的方案是
 
 $$
 f_{m} = \binom{(n - 4m) + (m + 1) - 1}{(n - 4m) - 1}
@@ -245,9 +243,7 @@ $$
 
 ### [BZOJ2839 集合计数](https://www.luogu.com.cn/problem/P10596)
 
-还是由**至少**转到**恰好**。
-
-设 $f_{k}$ 表示钦定有 $k$ 个相同元素的情况，那么，剩下的 $n - k$ 个元素能够组成 $2^{n - k}$ 个集合，而，这 $2^{n - k}$ 个集合又能够再组成 $2^{2^{n - k}}$ 个集合。那么显然有 
+设 $f_{k}$ 表示钦定有 $k$ 个相同元素的情况，那么，剩下的 $n - k$ 个元素能够组成 $2^{n - k}$ 个集合，而，这 $2^{n - k}$ 个集合又能够再组成 $2^{2^{n - k}}$ 个集合。那么显然有
 
 $$
 f_{k} = \binom{n}{k}2^{2^{n - k}}
@@ -267,9 +263,9 @@ $$
 
 我们就得到了 $g_{k}$。时间复杂度 $\mathcal{O}(n)$。
 
-### [P5505 [JSOI2011] 分特产](https://www.luogu.com.cn/problem/P5505)
+### [P5505 \[JSOI2011\] 分特产](https://www.luogu.com.cn/problem/P5505)
 
-首先设 $f_{i}$ 表示至少有 $i$ 个同学没有拿到特产的方案数，那么有：
+首先设 $f_{i}$ 表示**钦定**有 $i$ 个同学没有拿到特产的方案数，那么有：
 
 $$
 f_{i} = \binom{n}{i} \times \prod\limits_{j}^{m}\binom{a_{j} + n - i - 1}{n - i - 1}
@@ -287,9 +283,9 @@ $$
 
 ### [BZOJ4665 小 w 的喜糖](https://www.luogu.com.cn/problem/P10597)
 
-依然是正难则反+二项式反演 ~~演都不带演~~
+依然是正难则反 + 二项式反演 ~~演都不带演~~
 
-还是从**至少**做起。设 $f_{i}$ 表示至少有 $i$ 个位置相同，$g_{i}$ 表示正好 $i$ 个位置相同。那么有反演：
+设 $f_{i}$ 表示钦定有 $i$ 个位置相同，$g_{i}$ 表示正好 $i$ 个位置相同。那么有反演：
 
 $$
 f_{i} = \sum\limits_{j = n}^{m}\binom{j}{n}g_{j} 
@@ -310,6 +306,7 @@ $$
 很明显，$f_{i} = dp_{m,i}$，其中 $m$ 表示颜色总数。然后我们就得出了答案，时间复杂度为 $\mathcal{O}(n^2)$。
 
 code:
+
 ```cpp
 sort(a + 1,a + n + 1);
 int m = unique(a + 1,a + n + 1) - a - 1,tmp = 0;
@@ -328,6 +325,6 @@ for (int i = 0; i <= n; i++)
 
 ## 好题推荐
 
-[P4448 [AHOI2018初中组] 球球的排列](https://www.luogu.com.cn/problem/P4448)  
-[P3158 [CQOI2011] 放棋子](https://www.luogu.com.cn/problem/P3158)  
-[P3160 [CQOI2012] 局部极小值](https://www.luogu.com.cn/problem/P3160)
+[P4448 \[AHOI2018 初中组\] 球球的排列](https://www.luogu.com.cn/problem/P4448)\
+[P3158 \[CQOI2011\] 放棋子](https://www.luogu.com.cn/problem/P3158)\
+[P3160 \[CQOI2012\] 局部极小值](https://www.luogu.com.cn/problem/P3160)
