更新学习笔记

--- a/src/content/blog/矩阵快速幂学习笔记.md
+++ b/src/content/blog/矩阵快速幂学习笔记.md
@@ -9,20 +9,20 @@ tags:
   - 学习笔记
 ---
 
-这矩阵快速幂多是一件美事啊  
+这矩阵快速幂多是一件美事啊\
 只用推式子，而且这式子也是十分好推。
 
 ## [P1962 斐波那契数列](https://www.luogu.com.cn/problem/P1962)
 
-是个人第一眼看到这题，第一眼都会想着递推。但是如果真这么简单的话，它就不会是绿题了。我们一看数据范围：$n \le 2^{63}$。$\mathcal{O}(n)$ 不给你全部炸完？  
+是个人第一眼看到这题，第一眼都会想着递推。但是如果真这么简单的话，它就不会是绿题了。我们一看数据范围：$n \le 2^{63}$。$\mathcal{O}(n)$ 不给你全部炸完？\
 先来推式子：$f_{i} = f_{i - 1} + f_{i - 2} , f_{i - 1} = f_{i - 1}$。我们把他整理一下：
 
 $$
 \left\{
-  \begin{aligned}
-  f_{i} & = 1 \times f_{i - 1} + 1 \times f_{i - 2} \\
-  f_{i - 1} & = 1 \times f_{i - 1} + 0 \times f_{i - 2}
-  \end{aligned}
+ \begin{aligned}
+ f_{i} & = 1 \times f_{i - 1} + 1 \times f_{i - 2} \\
+ f_{i - 1} & = 1 \times f_{i - 1} + 0 \times f_{i - 2}
+ \end{aligned}
 \right.
 $$
 
@@ -131,7 +131,7 @@ signed main()
 }
 ```
 
-## [P6569 [NOI Online #3 提高组] 魔法值](https://www.luogu.com.cn/problem/P6569)
+## [P6569 \[NOI Online #3 提高组\] 魔法值](https://www.luogu.com.cn/problem/P6569)
 
 我们看：$n \le 100$，用邻接矩阵存图吧，在邻接矩阵中，$i$ 到 $j$ 有边，$dis_{i,j}$ 就为 $1$，反之为 $0$。然后我们就可以写出这样的一个柿子：
 
@@ -147,9 +147,9 @@ $$
 
 也是十分顺眼。
 
-然后，我们看，矩阵乘法，那不得用快速幂啊，但是快速幂要用到乘法结合律，我们来看看这玩意有没有结合律。啊，好像没有。但是不用快速幂又没法做啊，硬着头皮证一下吧。  
-发现 $dis$ 一定是一个 `01` 矩阵，似乎这个特殊性质有点用？  
-我们要证结合律，那么就是要证 $(A \times B) \times C = A \times (B \times C)$。根据定义， $(A \times B) \times C$ 的 $x,y$ 处的元素是 $\bigoplus\limits_{i = 1}^{n}(\bigoplus\limits_{j = 1}^{n}A_{x,j} \times B_{j,i}) \times C_{i,y}$。但是异或是没有分配律的，所以这括号现在还不能拆，得三思而后行。我们看 $C_{i,y}$ 只有 $0$ 和 $1$ 两种情况，分类讨论一下？
+然后，我们看，矩阵乘法，那不得用快速幂啊，但是快速幂要用到乘法结合律，我们来看看这玩意有没有结合律。啊，好像没有。但是不用快速幂又没法做啊，硬着头皮证一下吧。\
+发现 $dis$ 一定是一个 `01` 矩阵，似乎这个特殊性质有点用？\
+我们要证结合律，那么就是要证 $(A \times B) \times C = A \times (B \times C)$。根据定义，$(A \times B) \times C$ 的 $x,y$ 处的元素是 $\bigoplus\limits_{i = 1}^{n}(\bigoplus\limits_{j = 1}^{n}A_{x,j} \times B_{j,i}) \times C_{i,y}$。但是异或是没有分配律的，所以这括号现在还不能拆，得三思而后行。我们看 $C_{i,y}$ 只有 $0$ 和 $1$ 两种情况，分类讨论一下？
 
 - 当 $C_{i,y} = 0$ 时，那一大坨都给乘没了，所以可以拆。
 - 当 $C_{i,y} = 1$ 时，乘完还是那坨，也可以。
@@ -218,3 +218,4 @@ signed main()
     return 0;
 }
 ```
+
